--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-body{background-image: url(003.jpg)}
 h1{
     text-align: center;color: blue;
 }
@@ -9,6 +8,7 @@ h1{
     width: 90%;
     margin: 2rem auto;
     text-align: center;
+    border: solid rgb(189, 183, 183) 2pt;
 }
 .text{
     font-family: Georgia, 'Times New Roman', Times, serif, sans-serif;
